# bigip-icontrol-rce-research

./: Makefile  README.md  docker-compose.yml  evidence_gap_register.csv  owasp_control_matrix.csv  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sdlc_artifact_map.csv
.github/: CODEOWNERS  README.md  branch_protection.json  commitlint.config.js
.github/workflows/: README.md  branch-lint.yml  ci.yml  commit-lint.yml
docs/: README.md  asvs_rationale.md  build.md  cve_technical_analysis.md  dedup_reconciliation_design.md  fixture_design.md  grpc_service_contracts.md
proto/: README.md  control.proto  evidence.proto  exploit_trace.proto  reconciliation.proto  vulnerability.proto
scripts/: README.md  export_asvs_matrix.py  export_evidence.py  generate_readme_tables.py  generate_repo_map.py  proto_js.sh  release_gate.py  verify_proto_stubs.js  verify_tools.js  verify_tools.sh  verify_versions.js
sdlc/: README.md
sdlc/design/: README.md  architecture.md  control_design.md
sdlc/implementation/: CHANGELOG.md  README.md
sdlc/release/: README.md  release_checklist.md
sdlc/requirements/: README.md  asvs_requirements.csv  threat_model.md
sdlc/verification/: README.md  asvs-results.xml  asvs_test_matrix.csv  test_plan.md
services/: README.md  __init__.py
services/control/: Dockerfile  README.md  __init__.py  asvs_loader.py  owasp_crosswalk.py  server.py
services/evidence/: Dockerfile  README.md  __init__.py  hasher.py  ledger.py  server.py
services/ingestion/: Dockerfile  README.md  __init__.py  dedup.py  parser.py  server.py
services/reconciliation/: Dockerfile  README.md  __init__.py  audit_trail.py  resolver.py  server.py
services/trace/: Dockerfile  README.md  __init__.py  capture.py  fixture_target.py  replay.py  server.py
tests/: README.md  __init__.py
tests/asvs/: README.md  __init__.py  test_a01_access_control.py  test_a02_crypto.py  test_a03_injection.py  test_a04_design.py  test_a05_misconfig.py  test_a05_security_config.py  test_a06_components.py  test_a06_vulnerable_components.py  test_a07_auth.py  test_a08_integrity.py  test_a09_logging.py  test_a10_ssrf.py  test_asvs_controls.py
tests/fixtures/: README.md  __init__.py  exploit_trace_vectors.json  trace_vector.md
tests/integration/: README.md  __init__.py  test_full_pipeline.py  test_pipeline.py
tests/unit/: README.md  __init__.py  test_dedup.py  test_evidence_hasher.py  test_ingestion_dedup.py  test_ingestion_parser.py  test_reconciliation_resolver.py  test_trace_capture.py
