# Repository : bigip-icontrol-rce-research
# Path       : pyproject.toml
# Purpose    : Configures Python build metadata, linting, typing, and pytest settings.
# Layer      : config
# SDLC Phase : implementation
# ASVS Ref   : V14.2.1
# OWASP Ref  : A06
# Modified   : 2026-04-11
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bigip-icontrol-rce-research"
version = "0.1.0"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","N","S","B","A","C4"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "asvs: ASVS control verification",
  "integration: requires docker-compose stack",
  "unit: no external dependencies",
]
